syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "PersonProto";
option objc_class_prefix = "HLW";

//package personProto;

// The person echo service definition.
service Person {
    // Echo the person back
    rpc EchoPerson (PersonRequest) returns (PersonResponse) {}
}

// The request message containing person info.
message PersonRequest {
    string name = 1;
    string surname = 2;
    int32 age = 3;
}

// The response message containing person info.
message PersonResponse {
    string name = 1;
    string surname = 2;
    int32 age = 3;
    bool adult = 4;
    int32 count = 5;
}
